internal/xds/translator/testdata/out/xds-ir/admission-control.routes.yaml
- ignorePortInHostMatching: true
  name: first-listener
  virtualHosts:
  - domains:
    - '*'
    name: first-listener/*
    routes:
    - match:
        path: foo/bar
      name: first-route
      route:
        cluster: first-route-dest
        upgradeConfigs:
        - upgradeType: websocket
      typedPerFilterConfig:
        envoy.filters.http.admission_control:
          '@type': type.googleapis.com/envoy.extensions.filters.http.admission_control.v3.AdmissionControl
          aggression:
            defaultValue: 1
          enabled:
            defaultValue: true
          maxRejectionProbability:
            defaultValue:
              value: 80
          rpsThreshold:
            defaultValue: 5
          samplingWindow: 30s
          srThreshold:
            defaultValue:
              value: 95
          successCriteria:
            httpCriteria:
              httpSuccessStatus:
              - end: 201
                start: 200
              - end: 202
                start: 201
              - end: 203
                start: 202
              - end: 205
                start: 204
    - match:
        path: example
      name: second-route
      route:
        cluster: second-route-dest
        upgradeConfigs:
        - upgradeType: websocket
      typedPerFilterConfig:
        envoy.filters.http.admission_control:
          '@type': type.googleapis.com/envoy.extensions.filters.http.admission_control.v3.AdmissionControl
          aggression:
            defaultValue: 2
          enabled:
            defaultValue: true
          maxRejectionProbability:
            defaultValue:
              value: 95
          rpsThreshold:
            defaultValue: 10
          srThreshold:
            defaultValue:
              value: 80
          successCriteria:
            grpcCriteria:
              grpcSuccessStatus:
              - 0
              - 1
    - match:
        path: test
      name: third-route
      route:
        cluster: third-route-dest
        upgradeConfigs:
        - upgradeType: websocket
      typedPerFilterConfig:
        envoy.filters.http.admission_control:
          '@type': type.googleapis.com/envoy.extensions.filters.http.admission_control.v3.AdmissionControl
          enabled:
            defaultValue: true
          successCriteria: {}
